// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly for multi-ALM binding: editing a definition 1`] = `
<div
  className="big-padded"
>
  <DeferredSpinner
    loading={false}
  >
    <div
      className="spacer-bottom text-right"
    >
      <Tooltip
        mouseLeaveDelay={0.25}
        overlay={null}
      >
        <Button
          data-test="settings__alm-create"
          disabled={false}
          onClick={[MockFunction]}
        >
          settings.almintegration.create
        </Button>
      </Tooltip>
    </div>
    <AlmBindingDefinitionBox
      alm="azure"
      definition={
        Object {
          "key": "key",
          "personalAccessToken": "asdf1234",
        }
      }
      key="key"
      multipleDefinitions={false}
      onCheck={[MockFunction]}
      onDelete={[MockFunction]}
      onEdit={[MockFunction]}
    />
    <AlmBindingDefinitionForm
      bindingDefinition={
        Object {
          "key": "key",
          "personalAccessToken": "asdf1234",
        }
      }
      help={
        <FormattedMessage
          defaultMessage="settings.almintegration.azure.info"
          id="settings.almintegration.azure.info"
          values={
            Object {
              "link": <Link
                onlyActiveOnIndex={false}
                style={Object {}}
                target="_blank"
                to="/documentation/analysis/pr-decoration/"
              >
                learn_more
              </Link>,
            }
          }
        />
      }
      isSecondInstance={true}
      onCancel={[MockFunction]}
      onSubmit={[MockFunction]}
    >
      <Component />
    </AlmBindingDefinitionForm>
  </DeferredSpinner>
</div>
`;

exports[`should render correctly for multi-ALM binding: loaded 1`] = `
<div
  className="big-padded"
>
  <DeferredSpinner
    loading={false}
  >
    <div
      className="spacer-bottom text-right"
    >
      <Tooltip
        mouseLeaveDelay={0.25}
        overlay={null}
      >
        <Button
          data-test="settings__alm-create"
          disabled={false}
          onClick={[MockFunction]}
        >
          settings.almintegration.create
        </Button>
      </Tooltip>
    </div>
    <AlmBindingDefinitionBox
      alm="azure"
      definition={
        Object {
          "key": "key",
          "personalAccessToken": "asdf1234",
        }
      }
      key="key"
      multipleDefinitions={false}
      onCheck={[MockFunction]}
      onDelete={[MockFunction]}
      onEdit={[MockFunction]}
    />
  </DeferredSpinner>
</div>
`;

exports[`should render correctly for multi-ALM binding: loading ALM definitions 1`] = `
<div
  className="big-padded"
>
  <DeferredSpinner
    loading={true}
  >
    <div
      className="spacer-bottom text-right"
    >
      <Tooltip
        mouseLeaveDelay={0.25}
        overlay={null}
      >
        <Button
          data-test="settings__alm-create"
          disabled={false}
          onClick={[MockFunction]}
        >
          settings.almintegration.create
        </Button>
      </Tooltip>
    </div>
    <AlmBindingDefinitionBox
      alm="azure"
      definition={
        Object {
          "key": "key",
          "personalAccessToken": "asdf1234",
        }
      }
      key="key"
      multipleDefinitions={false}
      onCheck={[MockFunction]}
      onDelete={[MockFunction]}
      onEdit={[MockFunction]}
    />
  </DeferredSpinner>
</div>
`;

exports[`should render correctly for multi-ALM binding: loading project count 1`] = `
<div
  className="big-padded"
>
  <DeferredSpinner
    loading={false}
  >
    <div
      className="spacer-bottom text-right"
    >
      <Tooltip
        mouseLeaveDelay={0.25}
        overlay={
          <FormattedMessage
            defaultMessage="settings.almintegration.create.tooltip"
            id="settings.almintegration.create.tooltip"
            values={
              Object {
                "alm": "alm.azure",
                "link": <a
                  href="https://redirect.sonarsource.com/editions/enterprise.html?sourceEdition=developer"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  settings.almintegration.create.tooltip.link
                </a>,
              }
            }
          />
        }
      >
        <Button
          data-test="settings__alm-create"
          disabled={true}
          onClick={[MockFunction]}
        >
          settings.almintegration.create
        </Button>
      </Tooltip>
    </div>
    <AlmBindingDefinitionBox
      alm="azure"
      definition={
        Object {
          "key": "key",
          "personalAccessToken": "asdf1234",
        }
      }
      key="key"
      multipleDefinitions={false}
      onCheck={[MockFunction]}
      onDelete={[MockFunction]}
      onEdit={[MockFunction]}
    />
  </DeferredSpinner>
</div>
`;

exports[`should render correctly for multi-ALM binding: submitting 1`] = `
<div
  className="big-padded"
>
  <DeferredSpinner
    loading={false}
  >
    <div
      className="spacer-bottom text-right"
    >
      <Tooltip
        mouseLeaveDelay={0.25}
        overlay={null}
      >
        <Button
          data-test="settings__alm-create"
          disabled={false}
          onClick={[MockFunction]}
        >
          settings.almintegration.create
        </Button>
      </Tooltip>
    </div>
    <AlmBindingDefinitionBox
      alm="azure"
      definition={
        Object {
          "key": "key",
          "personalAccessToken": "asdf1234",
        }
      }
      key="key"
      multipleDefinitions={false}
      onCheck={[MockFunction]}
      onDelete={[MockFunction]}
      onEdit={[MockFunction]}
    />
  </DeferredSpinner>
</div>
`;

exports[`should render correctly for single-ALM binding 1`] = `
<div
  className="big-padded"
>
  <DeferredSpinner
    loading={true}
  >
    <div
      className="spacer-bottom text-right"
    >
      <Tooltip
        mouseLeaveDelay={0.25}
        overlay={
          <FormattedMessage
            defaultMessage="settings.almintegration.create.tooltip"
            id="settings.almintegration.create.tooltip"
            values={
              Object {
                "alm": "alm.azure",
                "link": <a
                  href="https://redirect.sonarsource.com/editions/enterprise.html?sourceEdition=developer"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  settings.almintegration.create.tooltip.link
                </a>,
              }
            }
          />
        }
      >
        <Button
          data-test="settings__alm-create"
          disabled={true}
          onClick={[MockFunction]}
        >
          settings.almintegration.create
        </Button>
      </Tooltip>
    </div>
    <AlmBindingDefinitionBox
      alm="azure"
      definition={
        Object {
          "key": "key",
          "personalAccessToken": "asdf1234",
        }
      }
      key="key"
      multipleDefinitions={false}
      onCheck={[MockFunction]}
      onDelete={[MockFunction]}
      onEdit={[MockFunction]}
    />
  </DeferredSpinner>
</div>
`;

exports[`should render correctly for single-ALM binding 2`] = `
<div
  className="big-padded"
>
  <DeferredSpinner
    loading={false}
  >
    <div
      className="spacer-bottom text-right"
    >
      <Tooltip
        mouseLeaveDelay={0.25}
        overlay={
          <FormattedMessage
            defaultMessage="settings.almintegration.create.tooltip"
            id="settings.almintegration.create.tooltip"
            values={
              Object {
                "alm": "alm.azure",
                "link": <a
                  href="https://redirect.sonarsource.com/editions/enterprise.html?sourceEdition=developer"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  settings.almintegration.create.tooltip.link
                </a>,
              }
            }
          />
        }
      >
        <Button
          data-test="settings__alm-create"
          disabled={true}
          onClick={[MockFunction]}
        >
          settings.almintegration.create
        </Button>
      </Tooltip>
    </div>
    <AlmBindingDefinitionBox
      alm="azure"
      definition={
        Object {
          "key": "key",
          "personalAccessToken": "asdf1234",
        }
      }
      key="key"
      multipleDefinitions={false}
      onCheck={[MockFunction]}
      onDelete={[MockFunction]}
      onEdit={[MockFunction]}
    />
  </DeferredSpinner>
</div>
`;

exports[`should render correctly for single-ALM binding 3`] = `
<div
  className="big-padded"
>
  <DeferredSpinner
    loading={false}
  >
    <div
      className="spacer-bottom text-right"
    >
      <Tooltip
        mouseLeaveDelay={0.25}
        overlay={
          <FormattedMessage
            defaultMessage="settings.almintegration.create.tooltip"
            id="settings.almintegration.create.tooltip"
            values={
              Object {
                "alm": "alm.azure",
                "link": <a
                  href="https://redirect.sonarsource.com/editions/enterprise.html?sourceEdition=developer"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  settings.almintegration.create.tooltip.link
                </a>,
              }
            }
          />
        }
      >
        <Button
          data-test="settings__alm-create"
          disabled={true}
          onClick={[MockFunction]}
        >
          settings.almintegration.create
        </Button>
      </Tooltip>
    </div>
    <AlmBindingDefinitionBox
      alm="azure"
      definition={
        Object {
          "key": "key",
          "personalAccessToken": "asdf1234",
        }
      }
      key="key"
      multipleDefinitions={false}
      onCheck={[MockFunction]}
      onDelete={[MockFunction]}
      onEdit={[MockFunction]}
    />
  </DeferredSpinner>
</div>
`;

exports[`should render correctly with validation 1`] = `
<div
  className="big-padded"
>
  <DeferredSpinner
    loading={false}
  >
    <div
      className="spacer-bottom text-right"
    >
      <Tooltip
        mouseLeaveDelay={0.25}
        overlay={null}
      >
        <Button
          data-test="settings__alm-create"
          disabled={false}
          onClick={[MockFunction]}
        >
          settings.almintegration.create
        </Button>
      </Tooltip>
    </div>
    <AlmBindingDefinitionBox
      alm="github"
      definition={
        Object {
          "appId": "123456",
          "clientId": "client1",
          "clientSecret": "**clientsecret**",
          "key": "key",
          "privateKey": "asdf1234",
          "url": "http://github.enterprise.com",
        }
      }
      key="key"
      multipleDefinitions={false}
      onCheck={[MockFunction]}
      onDelete={[MockFunction]}
      onEdit={[MockFunction]}
    />
  </DeferredSpinner>
</div>
`;

exports[`should render correctly with validation: create a first 1`] = `
<div
  className="big-padded"
>
  <DeferredSpinner
    loading={false}
  >
    <p
      className="spacer-top"
    >
      settings.almintegration.empty.github
    </p>
    <div
      className="big-spacer-top"
    >
      <Tooltip
        mouseLeaveDelay={0.25}
        overlay={null}
      >
        <Button
          data-test="settings__alm-create"
          disabled={false}
          onClick={[MockFunction]}
        >
          settings.almintegration.create
        </Button>
      </Tooltip>
    </div>
    <AlmBindingDefinitionForm
      bindingDefinition={
        Object {
          "appId": "123456",
          "clientId": "client1",
          "clientSecret": "**clientsecret**",
          "key": "key",
          "privateKey": "asdf1234",
          "url": "http://github.enterprise.com",
        }
      }
      help={
        <FormattedMessage
          defaultMessage="settings.almintegration.github.info"
          id="settings.almintegration.github.info"
          values={
            Object {
              "link": <Link
                onlyActiveOnIndex={false}
                style={Object {}}
                target="_blank"
                to="/documentation/analysis/pr-decoration/"
              >
                learn_more
              </Link>,
            }
          }
        />
      }
      isSecondInstance={false}
      onCancel={[MockFunction]}
      onSubmit={[MockFunction]}
    >
      <Component />
    </AlmBindingDefinitionForm>
  </DeferredSpinner>
</div>
`;

exports[`should render correctly with validation: create a second 1`] = `
<div
  className="big-padded"
>
  <DeferredSpinner
    loading={false}
  >
    <div
      className="spacer-bottom text-right"
    >
      <Tooltip
        mouseLeaveDelay={0.25}
        overlay={null}
      >
        <Button
          data-test="settings__alm-create"
          disabled={false}
          onClick={[MockFunction]}
        >
          settings.almintegration.create
        </Button>
      </Tooltip>
    </div>
    <AlmBindingDefinitionBox
      alm="github"
      definition={
        Object {
          "appId": "123456",
          "clientId": "client1",
          "clientSecret": "**clientsecret**",
          "key": "key",
          "privateKey": "asdf1234",
          "url": "http://github.enterprise.com",
        }
      }
      key="key"
      multipleDefinitions={false}
      onCheck={[MockFunction]}
      onDelete={[MockFunction]}
      onEdit={[MockFunction]}
    />
    <AlmBindingDefinitionForm
      bindingDefinition={
        Object {
          "appId": "123456",
          "clientId": "client1",
          "clientSecret": "**clientsecret**",
          "key": "key",
          "privateKey": "asdf1234",
          "url": "http://github.enterprise.com",
        }
      }
      help={
        <FormattedMessage
          defaultMessage="settings.almintegration.github.info"
          id="settings.almintegration.github.info"
          values={
            Object {
              "link": <Link
                onlyActiveOnIndex={false}
                style={Object {}}
                target="_blank"
                to="/documentation/analysis/pr-decoration/"
              >
                learn_more
              </Link>,
            }
          }
        />
      }
      isSecondInstance={true}
      onCancel={[MockFunction]}
      onSubmit={[MockFunction]}
    >
      <Component />
    </AlmBindingDefinitionForm>
  </DeferredSpinner>
</div>
`;

exports[`should render correctly with validation: empty 1`] = `
<div
  className="big-padded"
>
  <DeferredSpinner
    loading={false}
  >
    <p
      className="spacer-top"
    >
      settings.almintegration.empty.github
    </p>
    <div
      className="big-spacer-top"
    >
      <Tooltip
        mouseLeaveDelay={0.25}
        overlay={null}
      >
        <Button
          data-test="settings__alm-create"
          disabled={false}
          onClick={[MockFunction]}
        >
          settings.almintegration.create
        </Button>
      </Tooltip>
    </div>
  </DeferredSpinner>
</div>
`;
